--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,14 @@
-#left-nav {
-    margin-top: none;
-    margin-right: 20%;
-    margin-bottom: auto;
-    margin-left: 20%;
-    background-color: none;
-    text-align: left; /* centers the top-nav div within it */
-}
-
-html, body {
-    height: 100%;
-    margin: 0;
-}
-
-.wrapper {
-
+    body {
     background-image: url("../images/Wrapper_coldpressed2.png");
     height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 
-    min-height: 100%;
-    margin-bottom: -50px;
 }
 
-.footer {
+footer {
+        border-top-style: solid;
+        border-color: aquamarine;
+        border-top-width: 15px;
+        height: 5%;
         position: fixed;
         left: 0;
         bottom: 0;
@@ -35,15 +19,10 @@ html, body {
 
 }
 
-.push {
-    height: 20%;
-    border-top: 8px solid #4aaaa5;
-    background-color: gray;
-    overflow: scroll;
-}
 
 
 .contentbox {
+    
     width: 960px;
     margin-top: 3%;
     background-color: whitesmoke;
@@ -55,7 +34,7 @@ html, body {
 
 h2 {
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(50, 161, 156)
+    color: rgb(50, 161, 156);
 }
 
 p {
@@ -76,7 +55,51 @@ p {
     
 }
 
-th {
+ table {
+     background-color: white;
+     font-family: Arial, Helvetica, sans-serif;
+     text-align: center;
+     padding-right: 25%;
+     padding-left: 5%;
+    
+ }
 
-    color: gray;
-}
+ a:link {
+    text-decoration: gray;
+ }
+ 
+
+ /* Style inputs with type="text", select elements and textareas */
+    input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
+  
+  /* Style the submit button with a specific background color etc */
+    input[type=submit] {
+    background-color: rgb(50, 161, 156);
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  /* When moving the mouse over the submit button, add a darker green color */
+    input[type=submit]:hover {
+    background-color: rgb(41, 132, 127);
+  }
+  
+  /* Add a background color and some padding around the form */
+    .container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
